Alles in Nederland Klaar voor teksten

--- a/ekhartyoga.html
+++ b/ekhartyoga.html
@@ -3,6 +3,7 @@
 <head>
 <title>Timo Wentink &rarr; Digital Designer</title>
 <meta charset=”UTF-8″ />
+<meta name="description" content="Freelance Digital Designer from Utrecht met ervaring in User Experience, User Interface en Visual Design">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" type="text/css" href="css/style.css">
 <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
@@ -10,57 +11,61 @@
 
 </head>
 
-<body>
+<body class="animated fadeIn">
     <div class="container-fluid">
     <header class="header-grid">
-          <h1 class="pagetitle regular">Timo Wentink</h1>
-          <h1 class="pagefunction regular"><a href="index.html" class="link">&larr; Back</a></h1>
-          <h1 class="contact regular"><a class="link" href="mailto:timo@timowentink.nl?subject=Hi Timo">Slide in my mailbox</a></h1>
+
+          <h1 class="pagetitle medium">Timo Wentink</h1>
+          <h1 class="pagefunction medium animated fadeIn-long "><a href="index.html" class="link">&larr; Vorige</a></h1>
+          <h1 class="contact regular"><a class="link" href="mailto:timo@timowentink.nl?subject=Hi Timo">Contact</a></h1>
     </header>
-
-
-
     <section class="on-grid">
-          <div class="grid-3-center introduction">
-              <h1 class="large">A brighter and better design for EkhartYoga,
-              the video platform for doing yoga at home.</h1>
-
-              <h2 class="medium">Thousands of students and teachers around the world have joined this online community and get unlimited acces to thousands of classes by top teachers and over 70 guided programs. They can read and save articles and recipes, make playlists and dive deeper to learn everything yoga in their library.
+          <div class="grid-2-center introduction">
+              <h1 class="large">A brighter and better design for EkhartYoga. The video platform for doing yoga at home. </h1>
+              <h2 class="medium">Thousands of students and teachers around the world have joined this online community and get unlimited acces to thousands of classes.
               </h2>
-
             </div>
 
     </section>
-    </div>
+    <section class="on-grid">
+      <h4 class="ongrid grid-2 medium swipeAlert">&larr; &rarr;  swipe</h4>
+    </section>
+  </div>
+      <section class="off-grid slider animated fadeIn-long">
+        <div class="carousel" data-flickity='{ "imagesLoaded": true , "pageDots": false , "prevNextButtons": false , "percentPosition": false , "contain": true , "initialIndex": 0 }'>
 
-      <section class="off-grid slider">
-        <div class="carousel" data-flickity='{ "imagesLoaded": true , "pageDots": false , "prevNextButtons": false , "percentPosition": false  }'>
-
-          <img class="carousel-image first-image" src="img/ekhart1.png" alt="Ekhart Yoga" />
+          <img class="carousel-image" src="img/ekhart1.png" alt="Ekhart Yoga" />
           <img class="carousel-image" src="img/ekhart2.png" alt="Ekhart Yoga" />
           <img class="carousel-image" src="img/ekhart3.png" alt="Ekhart Yoga" />
           <img class="carousel-image" src="img/ekhart4.png" alt="Ekhart Yoga" />
           <img class="carousel-image" src="img/ekhart5.png" alt="Ekhart Yoga" />
+          <ul class="medium expertise">
+            <li class="strong">Diensten</li>
+            <li>User Experience</li>
+            <li>Visual Design </li>
+            <li>Mobile, Web and App</li>
+            <li>Product Design</li>
+            <li>Prototyping</li>
+
+        </ul><br/>
+
 
         </div>
+
         <div class="bottom-fade"></div>
       </section>
     <div class="container-fluid">
       <section class="on-grid has-padding-vh">
-        <div class="grid-3-center">
+        <div class="grid-2-center">
           <h3 class="medium">We helped EkhartYoga with their digital strategy while improving their platform with a new design, functionalities and an overall better user experience.</h3>
           <h3 class="medium">I was responsible for the entire user experience and visual design phase building this platform during my time at Frismedia. It was a great experience working with the cool people at EkhartYoga, learned a lot about yoga too.</h3>
-          <a href="#" class="link regular">Visit live</a>
-        </div>
-      </section>
 
+        </div>
+        </section>
 
     <footer>
-        <div class="on-grid">
-        <div class="name-in-footer grid-3 regular">Located in Utrecht, the Netherlands</div>
-        <div class="regular"><a class="link" href="https://www.linkedin.com/in/timowentink/">Linkedin</a></div>
-        </div>
-    </footer>
+        <div class="on-grid has-padding-vh">
+<div class="grid-2-center medium"><a href="#" class="link">Visit live ↗</a></div>    </footer>
   </div>
 </body>
 
