--- a/index.html
+++ b/index.html
@@ -3,37 +3,38 @@
 <head>
 <title>Timo Wentink &rarr; Digital Designer</title>
 <meta charset=”UTF-8″ />
+<meta name="description" content="Freelance Digital Designer from Utrecht met ervaring in User Experience, User Interface en Visual Design">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" type="text/css" href="css/style.css">
 
+
 </head>
 
-<body>
+<body class="animated fadeIn">
     <div class="container-fluid">
     <header class="header-grid">
           <h1 class="pagetitle regular"><a class="link" href="index.html">Timo Wentink</a></h1>
           <h1 class="pagefunction regular">Freelance Digital Designer</h1>
-          <h1 class="contact regular"><a class="link" href="mailto:timo@timowentink.nl?subject=Hi!">Contact</a></h1>
+          <h1 class="contact regular"><a class="link" href="contact.html">Contact</a></h1>
     </header>
 
-
-
     <section class="on-grid">
-          <div class="grid-2 introduction"><h1 class="large">I craft digital experiences where I am always looking for the right balance between form and function</h1><a href="#" class="link medium">&rarr; Available for projects</a></div>
+          <div class="grid-2 introduction animated fadeIn-long"><h1 class="large">Maker van digitale ervaringen,<br/> altijd op zoek naar de juiste balans tussen vorm en interactie</h1>
+          <div class="status animated fadeInDown"><a href="mailto:timowentink@gmail.com?Subject=Hi" class=" medium bounceInRight">Beschikbaar voor nieuwe uitdagingen</a><div>
+          </div>
     </section>
 
       <section class="projects on-grid has-padding-vh">
       <div class="grid-3 table projects">
-            <div class="table-head large">Selected projects</div>
-            <a class="fade-arrow" href="#">
+            <div class="table-head large">Geselecteerde projecten</div>
+            <a class="fade-arrow">
             <div class="row row-link">
               <div class="title">
                 <h3 class="medium">Tinker Imagineers</h3>
-                <span class="small">User Experience — Visual Design — Web & App</span>
+                <span class="small tags">Prototyping &bull; Visual Design &bull; Website</span>
               </div>
               <div class="right">
-                <span class="arrow fade">soon</span>
-                <span class="year small">2019</span>
+              <span class="arrow">Soon<span class="small fade move"> &#x2197;</span></span>
               </div>
             </div>
             </a>
@@ -41,23 +42,22 @@
             <div class="row row-link">
               <div class="title">
                 <h3 class="medium">EkhartYoga</h3>
-                <span class="small">User Experience — Visual Design — Web & App</span>
+                <span class="small tags">UX &bull; UI &bull; Web & App &bull; Design System</span>
               </div>
               <div class="right">
-                <span class="arrow fade">view case &rarr;</span>
-                <span class="year small">2019</span>
+                  <span class="arrow">Case<span class="small fade move"> &rarr;</span></span>
               </div>
             </div>
             </a>
             <a class="fade-arrow" href="mamaplaats.html">
             <div class="row row-link">
+
               <div class="title">
                 <h3 class="medium">Mamaplaats</h3>
-                <span class="small">User Experience — Visual Design — Web & App</span>
+                <span class="small tags">UX &bull; Visual Design &bull; Web & App</span>
               </div>
               <div class="right">
-                <span class="arrow fade">view case &rarr;</span>
-                <span class="year small">2019</span>
+                <span class="arrow">Case<span class="small fade move"> &rarr;</span></span>
               </div>
             </div>
             </a>
@@ -65,76 +65,75 @@
             <div class="row row-link">
               <div class="title">
                 <h3 class="medium">Glorydays media</h3>
-                <span class="small">User Experience — Visual Design — Web & App</span>
+                <span class="small tags">Visual Design &bull; Website</span>
               </div>
               <div class="right">
-                <span class="arrow fade">visit live ↗</span>
-                <span class="year small">2019</span>
+                <span class="arrow">Link<span class="small fade move"> &#x2197;</span></span>
               </div>
             </div>
             </a>
         </div>
       </section>
       <section class="who-hires-me on-grid has-padding-vh">
-        <div class="grid-3"><span class="large">Who hires me</span></div>
-        <div class="grid-2"><p class="medium"><strong>Agencies and brands </strong><br />
-                  hire me when they need a team player who adds value throughout the entire project.
-                  A hard worker who helps the team move forward by supporting others and adding knowledge and creativity along the way.
-        </p><br /><br />
-        <p class="medium"><strong> Small businesses </strong><br />
-          can contact me with creative challenges and use my services when they are in need of a (new) website, identity or other design and interactive work.
-        </p>
+        <div class="grid-3"><span class="large">Wie help ik</span></div>
+        <div class="grid-2"><p class="medium "><span class="strong">Studios en merken</span><br />
+                  huren mij in wanneer ze een team speler nodig hebben die projectbreed waarde en snelheid toevoegd. Ik ben een open-minded collega die het team verder brengt door anderen te ondersteunen en kennis en creativeit toe te voegen.
+        </p><br/><br/>
+        <p class="medium "><span class="strong">Kleine ondernemingen en start-ups</span><br />
+                  kunnen contact opnemen wanneer ze hulp nodig hebben bij creatieve uitdagingen.
       </div>
       </section>
       <section class="studio-experience on-grid has-padding-vh">
         <div class="grid-3 table">
-              <div class="table-head large">Studio experience</div>
-
-              <div class="row">
+              <div class="table-head large">Studio ervaring</div>
+              <a href="http://www.frismedia.nl" target="_blank">
+              <div class="row row-link">
                 <div class="title">
-                  <h3 class="medium"><a class="link" href="http://www.frismedia.nl">Frismedia</a></h3>
+                  <h3 class="medium">Frismedia</h3>
                 </div>
                 <div class="right">
                   <span class="year small">Designer &rsquo;16 &rarr; &rsquo;19</span>
-
                 </div>
               </div>
-              <div class="row">
+              <a href="http://www.cleverfranke.com" target="_blank">
+              <div class="row row-link">
                 <div class="title">
-                  <h3 class="medium"><a class="link" href="http://www.cleverfranke.com">Clever°Franke</a></h3>
+                  <h3 class="medium">Clever&deg;Franke</h3>
 
                 </div>
                 <div class="right">
-                  <span class="year small">Graduate &rsquo;12</span>
+                  <span class="year small">Afstudeerder &rsquo;12</span>
 
                 </div>
               </div>
-              <div class="row">
+              </a>
+              <a href="http://www.fabrique.nl" target="_blank">
+              <div class="row row-link">
                 <div class="title">
-                  <h3 class="medium"><a class="link" href="http://www.fabrique.nl">Fabrique Amsterdam</a></h3>
-
+                  <h3 class="medium">Fabrique</h3>
                 </div>
                 <div class="right">
-                  <span class="year small">Intern &rsquo;11</span>
-
+                  <span class="year small">Stagiair &rsquo;11</span>
                 </div>
               </div>
-              <div class="row">
+            </a>
+            <a href="http://www.roxmedia.nl" target="_blank">
+              <div class="row row-link">
                 <div class="title">
-                  <h3 class="medium"><a class="link" href="http://www.roxmedia.nl">Rox Media</a></h3>
-
+                  <h3 class="medium">Rox Media</h3>
                 </div>
                 <div class="right">
-                  <span class="year small">&rsquo;10 &rarr; &rsquo;11</span>
+                  <span class="year small">Designer &rsquo;10 &rarr; &rsquo;11</span>
 
                 </div>
               </div>
+              </a>
           </div>
 
       </section>
 
       <section class="what-i-do on-grid has-padding-vh">
-        <div class="grid-3"><span class="large">What I do</span></div>
+        <div class="grid-3"><span class="large">Waarmee help ik</span></div>
         <div class="grid-2"><p class="medium">Websites<br />
                                               Mobile Apps<br />
                                               User Interfaces<br />
@@ -152,8 +151,11 @@
 
     <footer>
         <div class="on-grid">
-        <div class="name-in-footer grid-3 regular">Located in Utrecht, the Netherlands</div>
-        <div class="regular"><a class="link" href="https://www.linkedin.com/in/timowentink/">Linkedin</a></div>
+        <div class="name-in-footer grid-3">
+          <span class="small-icon">&darr;</span><span class="regular">Utrecht, NL<span>
+          </div>
+          <div>
+          <span class="small-icon">&#x2197;</span><span class="regular"><a class="link" href="https://www.linkedin.com/in/timowentink/">Linkedin</a></span></div>
           </div>
     </footer>
 
