--- a/mamaplaats.html
+++ b/mamaplaats.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Timo Wentink &rarr; Digital Designer</title>
+<title>Timo Wentink &rarr;Freelance Digital Designer</title>
+<meta name="description" content="Freelance Digital Designer from Utrecht met ervaring in User Experience, User Interface en Visual Design">
 <meta charset=”UTF-8″ />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -10,17 +11,14 @@
 
 </head>
 
-<body>
-    <div class="container-fluid">
+<body class="animated fadeIn">
+    <div class="container-fluid ">
     <header class="header-grid">
 
           <h1 class="pagetitle medium">Timo Wentink</h1>
-          <h1 class="pagefunction medium"><a href="index.html" class="link">&larr; Back</a></h1>
+          <h1 class="pagefunction medium animated fadeIn-long "><a href="index.html" class="link">&larr; Vorige</a></h1>
           <h1 class="contact regular"><a class="link" href="mailto:timo@timowentink.nl?subject=Hi Timo">Contact</a></h1>
     </header>
-
-
-
     <section class="on-grid">
           <div class="grid-2-center introduction">
               <h1 class="large">A blogging platform where mothers (to be) can share their most personal stories and experiences</h1>
@@ -30,11 +28,10 @@
 
     </section>
     <section class="on-grid">
-        <h4 class="ongrid grid-2 medium swipeAlert">← →  swipe</h4>
+        <h4 class="ongrid grid-2 medium swipeAlert">&larr; &rarr;  swipe</h4>
     </section>
   </div>
       <section class="off-grid slider">
-
         <div class="carousel" data-flickity='{ "imagesLoaded": true , "pageDots": false , "prevNextButtons": false , "percentPosition": false , "contain": true , "initialIndex": 0 }'>
 
           <img class="carousel-image" src="img/mamaplaats1.png" alt="Mamaplaats" />
@@ -42,14 +39,13 @@
           <img class="carousel-image" src="img/mamaplaats3.png" alt="Mamaplaats" />
           <img class="carousel-image" src="img/mamaplaats4.png" alt="Mamaplaats" />
           <ul class="medium expertise">
+            <li class="strong">Diensten</li>
             <li>User Experience</li>
             <li>Visual Design </li>
             <li>Mobile, Web and App</li>
             <li>Product Design</li>
             <li>Prototyping</li>
-            <li></li>
-            <li><a href="#" class="link">Visit live ↗</a>
-</li>
+
         </ul><br/>
 
 
@@ -62,17 +58,13 @@
         <div class="grid-2-center">
           <h3 class="medium">We helped EkhartYoga with their digital strategy while improving their platform with a new design, functionalities and an overall better user experience.</h3>
           <h3 class="medium">I was responsible for the entire user experience and visual design phase building this platform during my time at Frismedia. It was a great experience working with the cool people at EkhartYoga, learned a lot about yoga too.</h3>
+
         </div>
-
-      </section>
-
+        </section>
 
     <footer>
-        <div class="on-grid">
-        <div class="name-in-footer grid-3 regular">Located in Utrecht, the Netherlands</div>
-        <div class="regular"><a class="link" href="https://www.linkedin.com/in/timowentink/">Linkedin</a></div>
-        </div>
-    </footer>
+        <div class="on-grid has-padding-vh">
+<div class="grid-2-center"><span class="small-icon">&#x2197;</span><a href="#" class="link medium">Visit live</a></div>    </footer>
   </div>
 </body>
 
