Laatste tekst wijzigingen

--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
     <header class="header-grid contact-header">
           <h1 class="pagetitle regular"><a class="" href="index.html">Timo Wentink</a></h1>
           <h1 class="pagefunction regular">Freelance Digital Designer</h1>
-          <h1 class="contact animated fadeIn regular"><a class="" onclick="history.go(-1)">&#10005; Close</a></h1>
+          <h1 class="contact animated fadeIn regular"><a class="" onclick="history.go(-1)">&#10005; Sluit</a></h1>
     </header>
     <section class="on-grid has-padding-vh">
           <div class="grid-5 animated fadeIn-long link">
