--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Timo Wentink &rarr; Digital Designer</title>
+<title>Timo Wentink &rarr; Freelance Digital Designer</title>
 <meta charset=”UTF-8″ />
 <meta name="description" content="Freelance Digital Designer from Utrecht met ervaring in User Experience, User Interface en Visual Design">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,7 +19,7 @@
     </header>
 
     <section class="on-grid">
-          <div class="grid-2 introduction animated fadeIn-long"><h1 class="large">Maker van digitale ervaringen,<br/> altijd op zoek naar de juiste balans tussen vorm en interactie</h1>
+          <div class="grid-2 introduction animated fadeIn-long"><h1 class="large">Maker van digitale ervaringen;<br/> altijd op zoek naar de juiste balans tussen vorm en functie</h1>
           <div class="status animated fadeInDown"><a href="mailto:timowentink@gmail.com?Subject=Hi" class=" medium bounceInRight">Beschikbaar voor nieuwe uitdagingen</a><div>
           </div>
     </section>
@@ -75,12 +75,12 @@
         </div>
       </section>
       <section class="who-hires-me on-grid has-padding-vh">
-        <div class="grid-3"><span class="large">Wie help ik</span></div>
+        <div class="grid-3"><h2 class="large">Wie help ik</h2></div>
         <div class="grid-2"><p class="medium "><span class="strong">Studios en merken</span><br />
-                  huren mij in wanneer ze een team speler nodig hebben die projectbreed waarde en snelheid toevoegd. Ik ben een open-minded collega die het team verder brengt door anderen te ondersteunen en kennis en creativeit toe te voegen.
-        </p><br/><br/>
+huren mij in wanneer ze verlegen zitten om een teamspeler met een sterke focus op Visual / User Interface Design, maar ook weet hoe een product functioneel verbeterd kan worden.</p><p class="medium"> Met een breed scala aan vaardigheden voeg ik waarde toe van concept tot development en is mijn doel altijd om het ontwerpproces te verbeteren en te versnellen. Gepaard met een open houding, betrokkenheid en een lach.
+      </p><br/><br/>
         <p class="medium "><span class="strong">Kleine ondernemingen en start-ups</span><br />
-                  kunnen contact opnemen wanneer ze hulp nodig hebben bij creatieve uitdagingen.
+        kunnen contact opnemen wanneer ze voor creatieve uitdagingen staan.</p><p class="medium"> Ik help ze groeien door de functionaliteit, bruikbaarheid en esthetiek van apps, websites of de merkbeleving te verbeteren.
       </div>
       </section>
       <section class="studio-experience on-grid has-padding-vh">
@@ -92,7 +92,7 @@
                   <h3 class="medium">Frismedia</h3>
                 </div>
                 <div class="right">
-                  <span class="year small">Designer &rsquo;16 &rarr; &rsquo;19</span>
+                  <span class="year small">Ontwerper &rsquo;16 &rarr; &rsquo;19</span>
                 </div>
               </div>
               <a href="http://www.cleverfranke.com" target="_blank">
@@ -123,7 +123,7 @@
                   <h3 class="medium">Rox Media</h3>
                 </div>
                 <div class="right">
-                  <span class="year small">Designer &rsquo;10 &rarr; &rsquo;11</span>
+                  <span class="year small">Ontwerper &rsquo;10 &rarr; &rsquo;11</span>
 
                 </div>
               </div>
@@ -133,17 +133,19 @@
       </section>
 
       <section class="what-i-do on-grid has-padding-vh">
-        <div class="grid-3"><span class="large">Waarmee help ik</span></div>
-        <div class="grid-2"><p class="medium">Websites<br />
-                                              Mobile Apps<br />
-                                              User Interfaces<br />
-                                              Concept Development<br />
-                                              Digital Strategy<br />
-                                              User Experience<br />
-                                              Product Design<br />
-                                              Design Systems<br />
-                                              Prototypes<br />
-                                              HTML/CSS<br />
+        <div class="grid-3"><h2 class="large">Wat doe ik</h2></div>
+        <div class="grid-2">
+          <ul class="medium">
+            <li>Visual Design</li>
+            <li>User Experience Design</li>
+            <li>User Interface Design</li>
+            <li>Product Design</li>
+            <li>Websites</li>
+            <li>Apps</li>
+            <li>Design Systems</li>
+            <li>Prototypes </li>
+            <li>HTML/CSS </li>
+          </ul>
         </p>
       </div>
       </section>
