--- a/ekhartyoga.html
+++ b/ekhartyoga.html
@@ -21,8 +21,8 @@
     </header>
     <section class="on-grid">
           <div class="grid-2-center introduction">
-              <h1 class="large">A brighter and better design for EkhartYoga. The video platform for doing yoga at home. </h1>
-              <h2 class="medium">Thousands of students and teachers around the world have joined this online community and get unlimited acces to thousands of classes.
+              <h1 class="large">Een beter en lichter design voor EkhartYoga. Het videoplatform voor thuis yoga. </h1>
+              <h2 class="medium">Duizenden yoga studenten en teachers over de hele wereld zijn lid van deze community en hebben toegang tot meer dan 3500 lessen door top teachers.
               </h2>
             </div>
 
@@ -39,13 +39,14 @@
           <img class="carousel-image" src="img/ekhart3.png" alt="Ekhart Yoga" />
           <img class="carousel-image" src="img/ekhart4.png" alt="Ekhart Yoga" />
           <img class="carousel-image" src="img/ekhart5.png" alt="Ekhart Yoga" />
-          <ul class="medium expertise">
-            <li class="strong">Diensten</li>
+          <ul class="expertise">
+            <li class="strong">Werkzaamheden</li>
             <li>User Experience</li>
             <li>Visual Design </li>
             <li>Mobile, Web and App</li>
             <li>Product Design</li>
             <li>Prototyping</li>
+            <li>Mailchimp</li>
 
         </ul><br/>
 
@@ -57,15 +58,15 @@
     <div class="container-fluid">
       <section class="on-grid has-padding-vh">
         <div class="grid-2-center">
-          <h3 class="medium">We helped EkhartYoga with their digital strategy while improving their platform with a new design, functionalities and an overall better user experience.</h3>
-          <h3 class="medium">I was responsible for the entire user experience and visual design phase building this platform during my time at Frismedia. It was a great experience working with the cool people at EkhartYoga, learned a lot about yoga too.</h3>
-
+          <p class="medium">Frismedia is vanaf het begin van EkhartYoga de digitale partner geweest en voor de derde versie van het platform betekende dit een complete redesign. Op basis van een nieuwe huisstijl hebben we het platform voorzien van nieuwe functies, een cleaner en lichter design en een verbeterde user-experience.</p>
+          <p class="medium">Ik was verantwoordelijk voor de gehele User Experience- en Visual Design fase. Hierbij lag de focus op het opzetten van een design systeem, een nieuwe onboarding, verbeterd dashboard en een betere scheiding tussen Marketing en Product pagina's.</p>
+          <p class="medium">Het was een interessante ervaring om samen te werken met de lieve mensen bij EkhartYoga, je leert nog eens wat over Yoga.</p>
         </div>
         </section>
 
     <footer>
         <div class="on-grid has-padding-vh">
-<div class="grid-2-center medium"><a href="#" class="link">Visit live ↗</a></div>    </footer>
+<div class="grid-2-center medium"><a href="https://www.ekhartyoga.com" class="link">Visit live ↗</a></div>    </footer>
   </div>
 </body>
 
