--- a/index.html
+++ b/index.html
@@ -27,17 +27,6 @@
       <section class="projects on-grid has-padding-vh">
       <div class="grid-3 table projects">
             <div class="table-head large">Geselecteerde projecten</div>
-            <a class="fade-arrow">
-            <div class="row row-link">
-              <div class="title">
-                <h3 class="medium">Tinker Imagineers</h3>
-                <span class="small tags">Prototyping &bull; Visual Design &bull; Website</span>
-              </div>
-              <div class="right">
-              <span class="arrow">Soon<span class="small fade move"> &#x2197;</span></span>
-              </div>
-            </div>
-            </a>
             <a class="fade-arrow" href="ekhartyoga.html">
             <div class="row row-link">
               <div class="title">
@@ -61,6 +50,17 @@
               </div>
             </div>
             </a>
+            <a class="fade-arrow" href="http://www.odeutrecht.nl" target="_blank">
+            <div class="row row-link">
+              <div class="title">
+                <h3 class="medium">Ode Utrecht</h3>
+                <span class="small tags">Visual Design &bull; Mailchimp templates</span>
+              </div>
+              <div class="right">
+              <span class="arrow">Link<span class="small fade move"> &#x2197;</span></span>
+              </div>
+            </div>
+            </a>
             <a class="fade-arrow" href="https://www.glorydaysmedia.nl" target="_blank">
             <div class="row row-link">
               <div class="title">
@@ -72,6 +72,18 @@
               </div>
             </div>
             </a>
+            <a class="fade-arrow" href="https://www.buddytobuddy.nl" target="_blank">
+            <div class="row row-link">
+              <div class="title">
+                <h3 class="medium">Buddy to Buddy</h3>
+                <span class="small tags">Logo Design &bull; Wordpress</span>
+              </div>
+              <div class="right">
+                <span class="arrow">Link<span class="small fade move"> &#x2197;</span></span>
+              </div>
+            </div>
+            </a>
+
         </div>
       </section>
       <section class="who-hires-me on-grid has-padding-vh">
