--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
               <div class="title">
                 <h3 class="medium">Mamaplaats</h3>
-                <span class="small tags">UX &bull; Visual Design &bull; Web & App</span>
+                <span class="small tags">UX &bull; UI &bull; Visual Design &bull; Web & App</span>
               </div>
               <div class="right">
                 <span class="arrow">Case<span class="small fade move"> &rarr;</span></span>
@@ -54,7 +54,7 @@
             <div class="row row-link">
               <div class="title">
                 <h3 class="medium">Ode Utrecht</h3>
-                <span class="small tags">Visual Design &bull; Mailchimp templates</span>
+                <span class="small tags">Visual Design &bull; Mailchimp Templates</span>
               </div>
               <div class="right">
               <span class="arrow">Link<span class="small fade move"> &#x2197;</span></span>
@@ -65,7 +65,7 @@
             <div class="row row-link">
               <div class="title">
                 <h3 class="medium">Glorydays media</h3>
-                <span class="small tags">Visual Design &bull; Website</span>
+                <span class="small tags">Visual Design</span>
               </div>
               <div class="right">
                 <span class="arrow">Link<span class="small fade move"> &#x2197;</span></span>
