--- a/ekhartyoga.html
+++ b/ekhartyoga.html
@@ -58,9 +58,9 @@
     <div class="container-fluid">
       <section class="on-grid has-padding-vh">
         <div class="grid-2-center">
-          <p class="medium">Frismedia is vanaf het begin van EkhartYoga de digitale partner geweest en voor de derde versie van het platform betekende dit een complete redesign. Op basis van een nieuwe huisstijl hebben we het platform voorzien van nieuwe functies, een cleaner en lichter design en een verbeterde user-experience.</p>
-          <p class="medium">Ik was verantwoordelijk voor de gehele User Experience- en Visual Design fase. Hierbij lag de focus op het opzetten van een design systeem, een nieuwe onboarding, verbeterd dashboard en een betere scheiding tussen Marketing en Product pagina's.</p>
-          <p class="medium">Het was een interessante ervaring om samen te werken met de lieve mensen bij EkhartYoga, je leert nog eens wat over Yoga.</p>
+          <p class="medium">Frismedia is vanaf het begin van EkhartYoga de digitale partner geweest en voor de derde versie van het platform betekende dit een complete redesign. Op basis van een nieuwe huisstijl hebben we het platform voorzien van nieuwe functies, een cleaner en lichter design en een verbeterde gebruikservaring.</p>
+          <p class="medium">Ik was verantwoordelijk voor de gehele User Experience en Visual & User Interface Design fase. Hierbij lag de focus op het opzetten van een design systeem, een nieuwe onboarding, verbeterd dashboard en een betere scheiding tussen Marketing en Product pagina's.</p>
+          <p class="medium">Het was een interessante ervaring om samen te werken met de lieve mensen bij EkhartYoga en te verdiepen in een onderwerp en business om het platform te laten groeien.</p>
         </div>
         </section>
 
