--- a/mamaplaats.html
+++ b/mamaplaats.html
@@ -22,7 +22,7 @@
     <section class="on-grid">
           <div class="grid-2-center introduction">
               <h1 class="large">Een sociaal netwerk waar moeders (to-be) hun persoonlijke verhalen en ervaringen kunnen delen. </h1>
-              <h2 class="medium">## Een compleet re-design dat alle functionaliteiten, bruikbaarheid en beleving verbeterd, zowel voor de gebruiker als voor de redactie.
+              <h2 class="medium">Een compleet re-design dat alle functionaliteiten, bruikbaarheid en beleving verbeterd, zowel voor de gebruiker als voor de redactie.
               </h2>
             </div>
 
@@ -58,13 +58,13 @@
         <div class="grid-2-center">
           <p class="medium">Soms heb je van die projecten waar je als ontwerper ver van het onderwerp staat. Dit was er zo één, maar wel een erg leuke en leerzame. De uitdaging zat hem in een zo eenvoudig mogelijke user experience neer te zetten voor een doelgroep die niet erg 'tech-savvy' is. Dit hebben we opgelost door een minimaal ontwerp in te zetten met, voor de gebruiker, herkenbare patronen en duidelijke (micro)copy.</p>
           <p class="medium">Het meeste plezier heb ik gehaald uit het ontwerpen van de verschillende content editors. Gebruikers kunnen moeiteloos blogs schrijven en publiceren, quotes ontwerpen en snapshots uploaden om hun verhaal te delen zowel op mobiel als op desktop. Een bijbehorende mobiele app is helaas nooit verder dan een interactief prototype gekomen.</h3>
-          <p class="medium">Na live-gang zijn we bij Frismedia constant bezig geweest om het platform te verbeteren en uit te breiden met nieuwe functies. Inmiddels is een andere partij er mee aan de haal gegaan, helaas. </p>
+          <p class="medium">Na live-gang zijn we bij Frismedia constant bezig geweest om het platform te verbeteren en uit te breiden met nieuwe functies en te verbeteren op basis van statistieken en feedback van gebruikers.</p>
         </div>
         </section>
 
     <footer>
         <div class="on-grid has-padding-vh">
-<div class="grid-2-center"><span class="small-icon">&#x2197;</span><a href="https://www.mamaplaats.nl" class="link medium">Visit live</a></div>    </footer>
+<div class="grid-2-center"><p class="medium">Inmiddels is een andere partij er mee aan de haal gegaan, waardoor ze in mijn ogen weer enkele stappen terug hebben gedaan.</p><span class="small-icon">&#x2197;</span><a href="https://www.mamaplaats.nl" class="link medium">Visit live</a></div>    </footer>
   </div>
 </body>
 
