--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 huren mij in wanneer ze verlegen zitten om een teamspeler met een sterke focus op Visual &amp; User Interface Design, maar ook weet hoe een product functioneel verbeterd kan worden.</p><p class="medium"> Met een breed scala aan vaardigheden voeg ik waarde toe van concept tot development en is mijn doel altijd om het ontwerpproces te verbeteren en te versnellen. Gepaard met een open houding, betrokkenheid en een lach.
       </p><br/><br/>
         <p class="medium "><span class="strong">Kleine ondernemingen en start-ups</span><br />
-        kunnen contact opnemen wanneer ze voor creatieve uitdagingen staan. Ik help ze vooruit door de functionaliteit, bruikbaarheid en esthetiek van apps, websites of beleving te verbeteren.
+        kunnen contact opnemen wanneer ze voor creatieve uitdagingen staan. Ik help ze vooruit door de functionaliteit, bruikbaarheid en esthetiek van apps en websites of merkbeleving te verbeteren.
       </div>
       </section>
       <section class="studio-experience on-grid has-padding-vh">
