--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
 <meta name="description" content="Freelance Digital Designer from Utrecht met ervaring in User Experience, User Interface en Visual Design">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" type="text/css" href="css/style.css">
-
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
+<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#111111">
+<meta name="msapplication-TileColor" content="#faf0ec">
+<meta name="theme-color" content="#faf0ec">
 
 </head>
 
@@ -89,10 +95,10 @@
       <section class="who-hires-me on-grid has-padding-vh">
         <div class="grid-3"><h2 class="large">Wie help ik</h2></div>
         <div class="grid-2"><p class="medium "><span class="strong">Studios en merken</span><br />
-huren mij in wanneer ze verlegen zitten om een teamspeler met een sterke focus op Visual &amp; User Interface Design, maar ook weet hoe een product functioneel verbeterd kan worden.</p><p class="medium"> Met een breed scala aan vaardigheden voeg ik waarde toe van concept tot development en is mijn doel altijd om het ontwerpproces te verbeteren en te versnellen. Gepaard met een open houding, betrokkenheid en een lach.
+huren mij in wanneer ze verlegen zitten om een teamspeler met een sterke focus op Visual &amp; User Interface Design, maar ook weet hoe producten functioneel verbeterd kunnen worden.</p><p class="medium"> Met een breed scala aan vaardigheden voeg ik waarde toe van concept tot development en is mijn doel altijd om het ontwerpproces te verbeteren en te versnellen. Gepaard met een open houding, betrokkenheid en een lach.
       </p><br/><br/>
         <p class="medium "><span class="strong">Kleine ondernemingen en start-ups</span><br />
-        kunnen contact opnemen wanneer ze voor creatieve uitdagingen staan. Ik help ze vooruit door de functionaliteit, bruikbaarheid en esthetiek van apps en websites of merkbeleving te verbeteren.
+        kunnen contact opnemen wanneer ze voor creatieve uitdagingen staan. Ik help ze vooruit door de functionaliteit, bruikbaarheid en esthetiek van apps en websites of de merkbeleving te verbeteren.
       </div>
       </section>
       <section class="studio-experience on-grid has-padding-vh">
