--- a/mamaplaats.html
+++ b/mamaplaats.html
@@ -8,6 +8,13 @@
 <link rel="stylesheet" type="text/css" href="css/style.css">
 <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
 <link rel="stylesheet" href="css/flickity.css" media="screen">
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
+<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#111111">
+<meta name="msapplication-TileColor" content="#faf0ec">
+<meta name="theme-color" content="#faf0ec">
 
 </head>
 
