--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </header>
 
     <section class="on-grid">
-          <div class="grid-2 introduction animated fadeIn-long"><h1 class="large">Maker van digitale ervaringen;<br/> altijd op zoek naar de juiste balans tussen vorm en functie</h1>
+          <div class="grid-2 introduction animated fadeIn-long"><h1 class="large">Maker van digitale ervaringen;<br/> altijd op zoek naar de juiste balans <br/>tussen vorm en functie</h1>
           <div class="status animated fadeInDown"><a href="mailto:timowentink@gmail.com?Subject=Hi" class=" medium bounceInRight">Beschikbaar voor nieuwe uitdagingen</a><div>
           </div>
     </section>
