Site manager TAG

--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-133738104-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-133738104-1');
+</script>
+
 <title>Timo Wentink &rarr; Freelance Digital Designer</title>
 <meta charset=”UTF-8″ />
 <meta name="description" content="Freelance Digital Designer from Utrecht met ervaring in User Experience, User Interface en Visual Design">
