--- a/ekhartyoga.html
+++ b/ekhartyoga.html
@@ -31,8 +31,8 @@
     <div class="container-fluid">
     <header class="header-grid">
 
-          <h1 class="pagetitle medium">Timo Wentink</h1>
-          <h1 class="pagefunction medium animated fadeIn-long "><a href="index.html" class="link">&larr; Vorige</a></h1>
+          <h1 class="pagetitle regular">Timo Wentink</h1>
+          <h1 class="pagefunction regular animated fadeIn-long "><a href="index.html" class="link">&larr; Vorige</a></h1>
           <h1 class="contact regular"><a class="link" href="mailto:timo@timowentink.nl?subject=Hi Timo">Contact</a></h1>
     </header>
     <section class="on-grid">
@@ -42,9 +42,6 @@
               </h2>
             </div>
 
-    </section>
-    <section class="on-grid">
-      <h4 class="ongrid grid-2 medium swipeAlert">&larr; &rarr;  swipe</h4>
     </section>
   </div>
       <section class="off-grid slider animated fadeIn-long">
@@ -72,6 +69,9 @@
         <div class="bottom-fade"></div>
       </section>
     <div class="container-fluid">
+      <section class="on-grid">
+        <h4 class="ongrid grid-2 medium swipeAlert">&larr; &rarr;</h4>
+      </section>
       <section class="on-grid has-padding-vh">
         <div class="grid-2-center">
           <p class="medium">Frismedia is vanaf het begin van EkhartYoga de digitale partner geweest en voor de derde versie van het platform betekende dit een complete redesign. Op basis van een nieuwe huisstijl hebben we het platform voorzien van nieuwe functies, een cleaner en lichter design en een verbeterde gebruikservaring.</p>
@@ -82,7 +82,7 @@
 
     <footer>
         <div class="on-grid has-padding-vh">
-<div class="grid-2-center medium"><a href="https://www.ekhartyoga.com" class="link">Visit live ↗</a></div>    </footer>
+<div class="grid-2-center medium"><a href="https://www.ekhartyoga.com" class="link">Bezoek website ↗</a></div>    </footer>
   </div>
 </body>
 
