--- a/mamaplaats.html
+++ b/mamaplaats.html
@@ -31,8 +31,8 @@
     <div class="container-fluid ">
     <header class="header-grid">
 
-          <h1 class="pagetitle medium">Timo Wentink</h1>
-          <h1 class="pagefunction medium animated fadeIn-long "><a href="index.html" class="link">&larr; Vorige</a></h1>
+          <h1 class="pagetitle regular">Timo Wentink</h1>
+          <h1 class="pagefunction regular animated fadeIn-long "><a href="index.html" class="link">&larr; Vorige</a></h1>
           <h1 class="contact regular"><a class="link" href="mailto:timo@timowentink.nl?subject=Hi Timo">Contact</a></h1>
     </header>
     <section class="on-grid">
@@ -80,7 +80,7 @@
 
     <footer>
         <div class="on-grid has-padding-vh">
-<div class="grid-2-center"><p class="medium">Inmiddels is een andere partij er mee aan de haal gegaan, waardoor ze in mijn ogen weer enkele stappen terug hebben gedaan.</p><span class="small-icon">&#x2197;</span><a href="https://www.mamaplaats.nl" class="link medium">Visit live</a></div>    </footer>
+<div class="grid-2-center"><p class="medium">Inmiddels is een andere partij er mee aan de haal gegaan, waardoor ze in mijn ogen weer enkele stappen terug hebben gedaan.</p><span class="small-icon">&#x2197;</span><a href="https://www.mamaplaats.nl" class="link medium">Bezoek website</a></div>    </footer>
   </div>
 </body>
 
