--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <title>Timo Wentink &rarr; Freelance Digital Designer</title>
 <meta charset=”UTF-8″ />
-<meta name="description" content="Freelance Digital Designer from Utrecht met ervaring in User Experience, User Interface en Visual Design">
+<meta name="description" content="Freelance Digital Designer uit Utrecht met uitgebreide ervaring in User Experience-, User Interface- en Visual Design">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" type="text/css" href="css/style.css">
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -105,10 +105,10 @@
       <section class="who-hires-me on-grid has-padding-vh">
         <div class="grid-3"><h2 class="large">Wie help ik</h2></div>
         <div class="grid-2"><p class="medium "><span class="strong">Studios en merken</span><br />
-huren mij in wanneer ze verlegen zitten om een teamspeler met een sterke focus op Visual &amp; User Interface Design, maar ook weet hoe producten functioneel verbeterd kunnen worden.</p><p class="medium"> Met een breed scala aan vaardigheden voeg ik waarde toe van concept tot development en is mijn doel altijd om het ontwerpproces te verbeteren en te versnellen. Gepaard met een open houding, betrokkenheid en een lach.
+huren mij in wanneer ze verlegen zitten om een teamspeler met een sterke focus op Visual &amp; User Interface Design, maar die ook weet hoe producten functioneel verbeterd kunnen worden.</p><p class="medium"> Met een breed scala aan vaardigheden voeg ik waarde toe van concept tot development en is mijn doel altijd om het ontwerpproces te verbeteren en te versnellen. Gepaard met een open houding, betrokkenheid en een lach.
       </p><br/><br/>
         <p class="medium "><span class="strong">Kleine ondernemingen en start-ups</span><br />
-        kunnen contact opnemen wanneer ze voor creatieve uitdagingen staan. Ik help ze vooruit door de functionaliteit, bruikbaarheid en esthetiek van apps en websites of de merkbeleving te verbeteren.
+        kunnen contact opnemen wanneer ze voor creatieve uitdagingen staan. Ik help ze vooruit door de functionaliteit, bruikbaarheid en esthetiek van apps en websites te verbeteren en de merkbeleving te vergroten.
       </div>
       </section>
       <section class="studio-experience on-grid has-padding-vh">
