--- a/ekhartyoga.html
+++ b/ekhartyoga.html
@@ -69,10 +69,9 @@
         <div class="bottom-fade"></div>
       </section>
     <div class="container-fluid">
-      <section class="on-grid">
-        <h4 class="ongrid grid-2 medium swipeAlert">&larr; &rarr;</h4>
-      </section>
+      <h4 class="grid-3 medium">&larr;</h4>
       <section class="on-grid has-padding-vh">
+
         <div class="grid-2-center">
           <p class="medium">Frismedia is vanaf het begin van EkhartYoga de digitale partner geweest en voor de derde versie van het platform betekende dit een complete redesign. Op basis van een nieuwe huisstijl hebben we het platform voorzien van nieuwe functies, een cleaner en lichter design en een verbeterde gebruikservaring.</p>
           <p class="medium">Ik was verantwoordelijk voor de gehele User Experience en Visual & User Interface Design fase. Hierbij lag de focus op het opzetten van een design systeem, een nieuwe onboarding, verbeterd dashboard en een betere scheiding tussen Marketing en Product pagina's.</p>
@@ -80,10 +79,13 @@
         </div>
         </section>
 
-    <footer>
+        <footer>
         <div class="on-grid has-padding-vh">
-<div class="grid-2-center medium"><a href="https://www.ekhartyoga.com" class="link">Bezoek website ↗</a></div>    </footer>
-  </div>
+        <div class="grid-2-center medium"><a href="https://www.ekhartyoga.com" class="link">Bezoek website ↗</a></div>
+        </div>
+      </footer>
+
+    </div>
 </body>
 
 </html>
