--- a/mamaplaats.html
+++ b/mamaplaats.html
@@ -11,7 +11,7 @@
   gtag('config', 'UA-133738104-1');
 </script>
 <title>Timo Wentink &rarr;Freelance Digital Designer</title>
-<meta name="description" content="Freelance Digital Designer from Utrecht met ervaring in User Experience, User Interface en Visual Design">
+<meta name="description" content="Freelance Digital Designer uit Utrecht met uitgebreide ervaring in User Experience-, User Interface- en Visual Design">
 <meta charset=”UTF-8″ />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" type="text/css" href="css/style.css">
