--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 </script>
 <title>Timo Wentink &rarr; Digital Designer</title>
 <meta charset=”UTF-8″ />
-<meta name="description" content="Freelance Digital Designer from Utrecht met ervaring in User Experience, User Interface en Visual Design">
+<meta name="description" content="Freelance Digital Designer uit Utrecht met uitgebreide ervaring in User Experience-, User Interface- en Visual Design">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" type="text/css" href="css/style.css">
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
