--- a/contact.html
+++ b/contact.html
@@ -22,6 +22,11 @@
 <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#111111">
 <meta name="msapplication-TileColor" content="#faf0ec">
 <meta name="theme-color" content="#faf0ec">
+<meta property="og:title" content="Timo Wentink — Freelance Digital Designer" />
+<meta property="og:type" content="image" />
+<meta property="og:url" content="https://timowentink.nl/contact.html" />
+<meta property="og:image" content="img/TimoWentinkOG.png" />
+
 
 
 </head>
