--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
 <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#111111">
 <meta name="msapplication-TileColor" content="#faf0ec">
 <meta name="theme-color" content="#faf0ec">
+<meta property="og:title" content="Timo Wentink — Freelance Digital Designer" />
+<meta property="og:type" content="image" />
+<meta property="og:url" content="https://timowentink.nl" />
+<meta property="og:image" content="img/TimoWentinkOG.png" />
 
 </head>
 
@@ -120,7 +124,7 @@ huren mij in wanneer ze verlegen zitten om een teamspeler met een sterke focus o
                   <h3 class="medium">Frismedia</h3>
                 </div>
                 <div class="right">
-                  <span class="year small">Ontwerper &rsquo;16 &rarr; &rsquo;19</span>
+                  <span class="year small">Ontwerper &bull; 3 jaar</span>
                 </div>
               </div>
               <a href="http://www.cleverfranke.com" target="_blank">
@@ -130,7 +134,7 @@ huren mij in wanneer ze verlegen zitten om een teamspeler met een sterke focus o
 
                 </div>
                 <div class="right">
-                  <span class="year small">Afstudeerder &rsquo;12</span>
+                  <span class="year small">Afstudeerder &bull; 2012</span>
 
                 </div>
               </div>
@@ -141,7 +145,7 @@ huren mij in wanneer ze verlegen zitten om een teamspeler met een sterke focus o
                   <h3 class="medium">Fabrique</h3>
                 </div>
                 <div class="right">
-                  <span class="year small">Stagiair &rsquo;11</span>
+                  <span class="year small">Stagiair &bull; 2011</span>
                 </div>
               </div>
             </a>
@@ -151,7 +155,7 @@ huren mij in wanneer ze verlegen zitten om een teamspeler met een sterke focus o
                   <h3 class="medium">Rox Media</h3>
                 </div>
                 <div class="right">
-                  <span class="year small">Ontwerper &rsquo;10 &rarr; &rsquo;11</span>
+                  <span class="year small">Ontwerper &bull; 1 jaar</span>
 
                 </div>
               </div>
