--- a/mamaplaats.html
+++ b/mamaplaats.html
@@ -24,6 +24,11 @@
 <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#111111">
 <meta name="msapplication-TileColor" content="#faf0ec">
 <meta name="theme-color" content="#faf0ec">
+<meta property="og:title" content="Timo Wentink — Freelance Digital Designer" />
+<meta property="og:type" content="image" />
+<meta property="og:url" content="https://timowentink.nl/mamaplaats.html" />
+<meta property="og:image" content="img/TimoWentinkOG.png" />
+
 
 </head>
 
