--- a/index.html
+++ b/index.html
@@ -47,6 +47,17 @@
       <section class="projects on-grid has-padding-vh">
       <div class="grid-3 table projects">
             <div class="table-head large">Geselecteerde projecten</div>
+            <a class="fade-arrow" href="https://www.tinker.nl">
+            <div class="row row-link">
+              <div class="title">
+                <h3 class="medium">Tinker Imagineers</h3>
+                <span class="small tags">Interaction &bull; Visual Design</span>
+              </div>
+              <div class="right">
+                  <span class="arrow">Link<span class="small fade move"> &#x2197;</span></span>
+              </div>
+            </div>
+            </a>
             <a class="fade-arrow" href="ekhartyoga.html">
             <div class="row row-link">
               <div class="title">
