--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <section class="projects on-grid has-padding-vh">
       <div class="grid-3 table projects">
             <div class="table-head large">Geselecteerde projecten</div>
-            <a class="fade-arrow" href="https://www.tinker.nl">
+            <a class="fade-arrow" href="https://www.tinker.nl" target="_blank">
             <div class="row row-link">
               <div class="title">
                 <h3 class="medium">Tinker Imagineers</h3>
