--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="row row-link">
               <div class="title">
                 <h3 class="medium">Tinker Imagineers</h3>
-                <span class="small tags">Interaction &bull; Visual Design</span>
+                <span class="small tags">Interactive - &bull; Visual Design</span>
               </div>
               <div class="right">
                   <span class="arrow">Link<span class="small fade move"> &#x2197;</span></span>
@@ -89,17 +89,6 @@
               </div>
               <div class="right">
               <span class="arrow">Link<span class="small fade move"> &#x2197;</span></span>
-              </div>
-            </div>
-            </a>
-            <a class="fade-arrow" href="https://www.glorydaysmedia.nl" target="_blank">
-            <div class="row row-link">
-              <div class="title">
-                <h3 class="medium">Glorydays media</h3>
-                <span class="small tags">Visual Design</span>
-              </div>
-              <div class="right">
-                <span class="arrow">Link<span class="small fade move"> &#x2197;</span></span>
               </div>
             </div>
             </a>
