--- a/ekhartyoga.html
+++ b/ekhartyoga.html
@@ -43,7 +43,7 @@
     <section class="on-grid">
           <div class="grid-2-center introduction">
               <h1 class="large">Een beter en lichter design voor EkhartYoga. Het videoplatform voor thuis yoga. </h1>
-              <h2 class="medium">Duizenden yoga studenten en teachers over de hele wereld zijn lid van deze community en hebben toegang tot meer dan 3500 lessen door top teachers.
+              <h2 class="medium">Duizenden yoga studenten en teachers over de hele wereld zijn lid van deze community en hebben toegang tot meer dan 3500 lessen gegeven door top teachers.
               </h2>
             </div>
 
